# drowsiness_detection

./: .gitignore  HANDOVER.md  README.md  check_cuda.py  gradio_app.py  pyproject.toml  requirements.txt
app/: config.py  demo_logic.py
app/inference/: device.py  live_engine.py  runtime.py
app/ui/: assets.py  build.py  scripts.py  styles.py  templates.py
app/ui/styles/: __init__.py  base.py  home.py  init.py  live.py  report.py  tokens.py  upload.py
figmaApp/: README.md  index.html
figmaApp/src/app/: routes.tsx
figmaApp/src/app/pages/: Home.tsx  RealtimeAnalysis.tsx  RealtimeReport.tsx  UploadAnalysis.tsx  UploadResult.tsx  index.ts
scripts/: infer_video.py
src/: teacher.py
src/dataset/: data_loader.py
src/detection/: __init__.py  drowsiness.py  face.py  metrics.py  scanner.py
src/models/: quantize.py  yolo_trainer.py
src/ocr/: __init__.py  reader.py
src/tracking/: __init__.py  slot.py
src/utils/: font_utils.py  kaggle_loader.py  loaders.py  video_conversion.py
src/visual/: annotator.py  plot.py
