[project]
name = "drowsiness-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "notebook>=7.5.4",
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "onnxslim>=0.1.89",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.21",
    "easyocr>=1.7.2",
    "onnx>=1.12.0,<2.0.0",
    "onnxslim>=0.1.71",
    "onnxruntime>=1.16.0",
    "coremltools>=8.0",
    "gradio>=6.10.0",
]
